[css-properties-values-api] Add support for <transform-function> syntax.

See https://drafts.css-houdini.org/css-properties-values-api-1/#supported-syntax-strings.

Note: The ConsumeTransformValue function in css_parsing_utils.cc has been
      moved without changes to the function.

R=chrishtr@chromium.org

Bug: 860309
Change-Id: Icdf7240f45960ed94fdfa62dd5e199ec865747cd
Reviewed-on: https://chromium-review.googlesource.com/1127042
Commit-Queue: Anders Ruud <andruud@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573914}
Former-commit-id: 46bb7995ad3cdcfe2854b8a3e58f75bb4ac500d2