third_party/blink/renderer/core/css/css_syntax_descriptor.h
@@ -26,6 +26,7 @@ enum class CSSSyntaxType {
   kAngle,
   kTime,
   kResolution,
+  kTransformFunction,
   kTransformList,
   kCustomIdent,
 };
